--- a/GameLauncher/packages.config
+++ b/GameLauncher/packages.config
@@ -1,5 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net40" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
+  <package id="CommandLineParser" version="2.8.0" targetFramework="net461" />
+  <package id="DiscordRichPresence" version="1.0.175" targetFramework="net461" />
+  <package id="Flurl" version="3.0.1" targetFramework="net462" />
+  <package id="Flurl.Http" version="3.0.1" targetFramework="net461" />
+  <package id="ini-parser" version="2.5.2" targetFramework="net40" />
+  <package id="Microsoft.PowerShell.5.ReferenceAssemblies" version="1.1.0" targetFramework="net461" />
+  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.2" targetFramework="net46" />
+  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net46" />
+  <package id="Nancy" version="2.0.0" targetFramework="net46" />
+  <package id="Nancy.Hosting.Self" version="2.0.0" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="WindowsFirewallHelper" version="2.0.4.70-beta2" targetFramework="net461" />
 </packages>
